classDiagram
    direction LR

    %% ========================
    %% Base & Mixin
    %% ========================
    class Base {
        <<abstract>>
        +int id PK
    }
    class TimestampMixin {
        <<mixin>>
        +datetime created_at
        +datetime updated_at
    }

    %% ========================
    %% Identity Context
    %% ========================
    class User {
        +str email UK
        +str phone UK
        +str password_hash
        +str full_name
        +date birthday
        +int points_balance "vi global HYBRID"
        +str system_role "regular/admin/super_admin"
        +bool is_active
        +datetime last_login_at
    }

    %% ========================
    %% Partner Context
    %% ========================
    class Partner {
        +str slug UK
        +str name
        +str description
        +PartnerCategory category
        +PartnerStatus status "PENDING/ACTIVE/SUSPENDED"
        +int owner_user_id FK
        +str logo_url
        +str banner_url
        +str contact_phone
        +str contact_email
        +str address
        +str tax_code
        +str website
        +str business_hours
        +dict settings "JSONB"
        +datetime activated_at
    }

    class Membership {
        +int partner_id FK
        +int user_id FK
        +int current_tier_id FK "nullable"
        +int lifetime_earned "monotonic"
        +datetime joined_at
        +datetime last_activity_at
    }

    class Tier {
        +int partner_id FK
        +str name "Bronze/Silver/Gold"
        +int min_points
        +Decimal earn_multiplier "0.5-5.0"
        +int sort_order
        +bool is_active
        +datetime deleted_at
    }

    class PointRule {
        +int partner_id FK
        +Decimal points_per_unit
        +int unit_amount "default 10.000"
        +bool use_tiers "default false"
        +bool is_active
    }

    %% ========================
    %% Loyalty Operations
    %% ========================
    class Transaction {
        +int partner_id FK
        +int membership_id FK
        +int gross_amount
        +int net_amount
        +int points_earned
        +str method
        +str note
        +str receipt_code
    }

    class PointLedger {
        +int user_id FK
        +int partner_id FK "trace source"
        +int delta "+EARN / -REDEEM"
        +LedgerReason reason "EARN/REDEEM/ADJUST"
        +str ref_type
        +int ref_id
        +int balance_after
        +str description
        %% append-only trigger
    }

    class Redemption {
        +int user_id FK
        +int partner_id FK
        +int reward_id FK
        +str redemption_code UK
        +int points_spent
        +RedemptionStatus status "PENDING/USED/EXPIRED"
        +datetime redeemed_at
        +datetime expires_at "+14 days"
        +datetime used_at
        +int used_by_staff_id FK
        +str snapshot_image_url "Hybrid lazy cache"
    }

    %% ========================
    %% Reward / Voucher Template
    %% ========================
    class Reward {
        +int partner_id FK
        +int template_id FK "nullable"
        +str name
        +str description
        +str image_url
        +int points_cost
        +int stock "nullable = unlimited"
        +OfferType offer_type "PERCENT/FIXED/ITEM_GIFT"
        +int offer_value "nullable cho ITEM_GIFT"
        +str offer_label
        +date valid_until
        +str terms
        +bool is_active
        +datetime deleted_at
    }

    class VoucherTemplate {
        +str name
        +TemplateCategory category "CAFE/FOOD/RETAIL/BEAUTY/SEASONAL/OTHER"
        +str frame_image_url
        +dict text_layout_config "JSONB"
        +bool is_active
    }

    %% ========================
    %% Inheritance
    %% ========================
    Base <|-- User
    Base <|-- Partner
    Base <|-- Membership
    Base <|-- Tier
    Base <|-- PointRule
    Base <|-- Transaction
    Base <|-- PointLedger
    Base <|-- Redemption
    Base <|-- Reward
    Base <|-- VoucherTemplate

    TimestampMixin <|.. User
    TimestampMixin <|.. Partner
    TimestampMixin <|.. Membership
    TimestampMixin <|.. Tier
    TimestampMixin <|.. PointRule
    TimestampMixin <|.. Transaction
    TimestampMixin <|.. Redemption
    TimestampMixin <|.. Reward
    TimestampMixin <|.. VoucherTemplate

    %% ========================
    %% Associations
    %% ========================
    User "1" --> "*" Membership : joins
    User "1" --> "*" PointLedger : owns_balance
    User "1" --> "*" Redemption : claims
    User "1" --> "*" Partner : owns_shop

    Partner "1" --> "*" Membership : has_members
    Partner "1" --> "*" Tier : configures
    Partner "1" --> "0..1" PointRule : earn_config
    Partner "1" --> "*" Reward : offers
    Partner "1" --> "*" Redemption : redeemed_at
    Partner "1" --> "*" Transaction : happens_at
    Partner "1" --> "*" PointLedger : trace_source

    Membership "*" --> "0..1" Tier : current_tier
    Membership "1" --> "*" Transaction : scoped_by

    VoucherTemplate "1" --> "*" Reward : designs
    Reward "1" --> "*" Redemption : redeemed_as
